--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,5 +1,20 @@
 html,
 body,
 #app {
+  min-width: 1200px;
   height: 100%;
+}
+.el-card,
+.el-table {
+  margin-top: 15px;
+}
+.el-cascader-menu {
+  height: 250px;
+}
+.el-steps,
+.pagination-wrap {
+  margin-top: 20px;
+}
+h5 {
+  margin: 15px 15px 15px 0;
 }
